Se creó el proyecto de la Abstract Factory.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /Factories.FactoryMethod/bin/Debug/netcoreapp2.2
 /Factories.FactoryMethod/obj
 /.vs/Factories/v16
+/.vs/Factories/DesignTimeBuild/.dtbcache
+/Factories.AbstractFactory/bin/Debug/netcoreapp2.2
+/Factories.AbstractFactory/obj
